--- a/gamemode_casual.cfg
+++ b/gamemode_casual.cfg
@@ -10,17 +10,17 @@ cash_player_bomb_defused							200
 cash_player_bomb_planted							200
 cash_player_damage_hostage							-30
 cash_player_interact_with_hostage					300
-cash_player_killed_enemy_default					200
+cash_player_killed_enemy_default					2000
 cash_player_killed_enemy_factor						0.5
 cash_player_killed_hostage							-1000
 cash_player_killed_teammate							-300
-cash_player_rescued_hostage							1000
+cash_player_rescued_hostage							2000
 cash_team_elimination_bomb_map						2700
 cash_team_elimination_hostage_map_t					2000
 cash_team_elimination_hostage_map_ct				2300
 cash_team_hostage_alive								0
 cash_team_hostage_interaction						500
-cash_team_loser_bonus								2400
+cash_team_loser_bonus								6400
 cash_team_loser_bonus_consecutive_rounds			0
 cash_team_planted_bomb_but_defused					200
 cash_team_rescued_hostage							0
@@ -34,7 +34,7 @@ ff_damage_reduction_grenade							0
 ff_damage_reduction_grenade_self					0
 ff_damage_reduction_other							0
 mp_afterroundmoney									0
-mp_buytime											45
+//mp_buytime											45
 mp_buy_anywhere										1
 mp_buy_during_immunity								0
 mp_death_drop_defuser								1	
@@ -61,7 +61,7 @@ mp_ggtr_last_weapon_kill_ends_half					0
 mp_respawn_immunitytime								0
 mp_halftime											0
 mp_match_can_clinch									1			// 0=No mercy rule, 1=team can clinch match win early if they win > 1/2 total rounds
-mp_maxmoney											10000
+mp_maxmoney											20000
 mp_maxrounds										15
 mp_molotovusedelay									0
 mp_playercashawards									1
