--- a/gamemode_casual.cfg
+++ b/gamemode_casual.cfg
@@ -10,17 +10,17 @@ cash_player_bomb_defused							200
 cash_player_bomb_planted							200
 cash_player_damage_hostage							-30
 cash_player_interact_with_hostage					300
-cash_player_killed_enemy_default					2000
+cash_player_killed_enemy_default					200
 cash_player_killed_enemy_factor						0.5
 cash_player_killed_hostage							-1000
 cash_player_killed_teammate							-300
-cash_player_rescued_hostage							2000
+cash_player_rescued_hostage							1000
 cash_team_elimination_bomb_map						2700
 cash_team_elimination_hostage_map_t					2000
 cash_team_elimination_hostage_map_ct				2300
 cash_team_hostage_alive								0
 cash_team_hostage_interaction						500
-cash_team_loser_bonus								6400
+cash_team_loser_bonus								2400
 cash_team_loser_bonus_consecutive_rounds			0
 cash_team_planted_bomb_but_defused					200
 cash_team_rescued_hostage							0
@@ -34,16 +34,16 @@ ff_damage_reduction_grenade							0
 ff_damage_reduction_grenade_self					0
 ff_damage_reduction_other							0
 mp_afterroundmoney									0
-//mp_buytime											45
+mp_buytime											9999
 mp_buy_anywhere										1
 mp_buy_during_immunity								0
-mp_death_drop_defuser								1	
+mp_death_drop_defuser								1
 mp_death_drop_grenade								2			// 0=none, 1=best, 2=current or best
 mp_death_drop_gun									1			// 0=none, 1=best, 2=current or best
 mp_defuser_allocation								2			// 0=none, 1=random, 2=everyone
 mp_force_pick_time									15
 mp_forcecamera										1			// Set to 1 for team only spectating.
-mp_free_armor										2			
+mp_free_armor										2
 mp_freezetime										5
 mp_friendlyfire										1
 mp_win_panel_display_time							3
@@ -72,16 +72,16 @@ mp_solid_teammates									2
 mp_startmoney										10000
 mp_teamcashawards									1
 mp_timelimit										0
-mp_warmuptime										60		
+mp_warmuptime										60
 mp_weapons_allow_zeus								1
 mp_weapons_allow_typecount							2
 spec_freeze_panel_extended_time						0
 spec_freeze_time									3.0
 sv_allow_votes										1		// Voting allowed in this mode
 sv_talk_enemy_living								0
-sv_talk_enemy_dead									1		
+sv_talk_enemy_dead									1
 sv_arms_race_vote_to_restart_disallowed_after		0
-sv_vote_to_changelevel_before_match_point			1		
+sv_vote_to_changelevel_before_match_point			1
 sv_deadtalk											0
 sv_ignoregrenaderadio								0
 tv_delay											30
@@ -89,7 +89,7 @@ mp_warmup_pausetimer								0
 mp_halftime_pausetimer								0
 mp_randomspawn										0
 mp_randomspawn_los									0
-sv_infinite_ammo									1
+sv_infinite_ammo									2
 ammo_grenade_limit_flashbang						1
 ammo_grenade_limit_total							3
 //
